src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACO_Affiliation__c</fullName>
        <label>ACO Affiliation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACS__c</fullName>
        <description>% of patients being treated for ACS</description>
        <label>ACS</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AFib__c</fullName>
        <description>% of patients being treated for A-Fib</description>
        <label>A-Fib</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AcceptMedicaid__c</fullName>
        <description>Does office accept Medicaid</description>
        <label>Accept Medicaid</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountCleaned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Cleaned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acne__c</fullName>
        <description>% of patients being treated for Acne</description>
        <label>Acne</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Note__c</fullName>
        <label>Activity Note</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Activity_Timestamp__c</fullName>
        <label>Activity Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Affidavit_Mailing_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affidavit/Mailing Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AfricanAmerican__c</fullName>
        <description>% of patients that are African American</description>
        <label>African American</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agency_of_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency of Record</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Agency</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Agency of Record)</relationshipLabel>
        <relationshipName>Accounts4_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AreaCode__c</fullName>
        <label>Area Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asian_American__c</fullName>
        <description>% of patients that are Asian American</description>
        <label>Asian American</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asthma__c</fullName>
        <description>% of patients being treated for Asthma</description>
        <label>Asthma</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AverageExamRoomWaitTime__c</fullName>
        <label>Average Exam Room Wait Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AverageWaitingRoomWaitTime__c</fullName>
        <label>Average Waiting Room Wait Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brands__c</fullName>
        <label>Relevant Brands</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BreastCancer__c</fullName>
        <description>% of patients treated for Breast Cancer</description>
        <label>Breast Cancer</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BroadBandSystem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BroadBand System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brochure_Shipment_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brochure Shipment Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMHID__c</fullName>
        <externalId>true</externalId>
        <label>CMH ID</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMHPriorityCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CMH Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMH_Priority_Ranking__c</fullName>
        <label>CMH Priority Ranking</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMH_Priority__c</fullName>
        <label>CMH Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COPD__c</fullName>
        <description>% of patients being treated for COPD</description>
        <label>COPD</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Acne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alzheimers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-Platelet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atrial Fibrillation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basal Insulin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bipolar Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood Glucose Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breast Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cholesterol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colon Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constipation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crohns Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes GLP-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes Oral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epilepsy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erectile Dysfunction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eye Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fibromyalgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foot Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GERD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gout</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Caucasian__c</fullName>
        <description>% of patients that are Caucasian</description>
        <label>Caucasian</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CeilingHgtofWR__c</fullName>
        <label>Ceiling Hgt of WR</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cholesterol__c</fullName>
        <description>% of patients being treated for Cholesterol</description>
        <label>Cholesterol</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clinic_Network_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if temporarily installing via network hotspot at the clinic&apos;s location.</description>
        <inlineHelpText>Check this box if clinic&apos;s IT department will allow network connectivity in the future.</inlineHelpText>
        <label>Clinic Network Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clinic_Office_Hours__c</fullName>
        <label>Clinic Office Hours</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ColoRectalCancer__c</fullName>
        <description>% of patients treated for Colo-Rectal Cancer</description>
        <label>Colo-Rectal Cancer</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CompetitorRemovalNotes__c</fullName>
        <label>Competitor Removal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompetitorSwitchout__c</fullName>
        <label>Competitor Switchout</label>
        <picklist>
            <picklistValues>
                <fullName>Accent Health (Authorization Not Required)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accent Health (Authorization Required)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiosmart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Everwell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Media Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Than 1 Switch Out (Explain in notes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Explain in Notes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Point (Healthy Advice (Authorization Not Required))</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Point (Healthy Advice)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietary System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Ticket_Issued__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please check when we are made aware that a ticket has been issues to remove competitor equipment.</description>
        <label>Competitor Ticket Issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Accent Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Focus Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Media Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardio Smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Everwell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 1 Switch Out (Explain in notes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Explain in Notes)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Connectivity_Method__c</fullName>
        <label>Connectivity Method</label>
        <picklist>
            <picklistValues>
                <fullName>LAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wifi</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_for_Scheduling__c</fullName>
        <label>Contact for Scheduling</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_to_sort_out_IT__c</fullName>
        <label>Contact to sort out IT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creative_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Creative Agency</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Agency</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Creative Agency)</relationshipLabel>
        <relationshipName>Accounts6_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CrohnsDisease__c</fullName>
        <description>% of patients being treated for Chron&apos;s Disease</description>
        <label>Crohn&apos;s Disease</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_RSS_Feed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has Member requested a custom RSS feed?</description>
        <inlineHelpText>Has Member requested a custom RSS feed?</inlineHelpText>
        <label>Custom RSS Feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Tab_on_Tablet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has Member requested a custom tab on the exam room tablet?</description>
        <label>Custom Tab on Tablet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customized_Content_Tablet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has Member requested custom content for the tablet?</description>
        <inlineHelpText>Has Member requested custom content for the tablet?</inlineHelpText>
        <label>Customized Content (Tablet)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customized_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has Member requested customized video content?</description>
        <label>Customized Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DHCP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DHCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMA_Zip_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DMA Zip Code</label>
        <referenceTo>Zip_Code_Data__c</referenceTo>
        <relationshipLabel>Accounts (DMA Zip Code)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMA_Zone__c</fullName>
        <formula>DMA_Zip_Code__r.DMAZone__c</formula>
        <label>DMA Zone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DVDSystem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DVD System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateUninstalled__c</fullName>
        <label>Date Uninstalled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_audited__c</fullName>
        <label>Most Recent Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Initial_Operation_Tablets__c</fullName>
        <label>Date of Initial Operation - Tablets</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateofInitialOperation__c</fullName>
        <label>Date of Initial Operation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DistancefromDHNtoCheckIn__c</fullName>
        <label>Distance from DHN to CheckIn</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DoNotContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Fax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Fax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMR_System__c</fullName>
        <description>The Electromic Medical Records system used by the practice.</description>
        <label>EMR System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EighteentoForty__c</fullName>
        <description>% of patients that are 18-40</description>
        <label>18 -40</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_for_scheduling__c</fullName>
        <label>Email for scheduling</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ErectileDysfunction__c</fullName>
        <description>% of patients being treated for Erectile Dysfunction.</description>
        <label>Erectile Dysfunction</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Est_Length_of_Cable_Run__c</fullName>
        <label>Est. Length of Cable Run</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EstofChairsinWR__c</fullName>
        <label>Est. # of Chairs in WR</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExistingDHNMemberSite__c</fullName>
        <label>Existing DHN Member Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY_Start__c</fullName>
        <label>FY Start</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FacilityType__c</fullName>
        <label>Facility Type</label>
        <picklist>
            <picklistValues>
                <fullName>Private Practice-Solo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital/Outpatient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satellite Clinic (Hospital Owned)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Female__c</fullName>
        <description>% of patients that are female</description>
        <label>Female</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Firewall_was_configured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Firewall was configured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FortyOnetoSixtyFour__c</fullName>
        <description>% of patients that are 41-64</description>
        <label>41-64</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FullOrPartTime__c</fullName>
        <label>Full/Part Time Hours</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GERD__c</fullName>
        <description>% of patients being treated for GERD</description>
        <label>GERD</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gateway__c</fullName>
        <label>Gateway</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Office_Email_Address__c</fullName>
        <label>General Office Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Group_Initial_Rollout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Initial Rollout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCP_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Professional Agency</description>
        <label>HCP Agency</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Agency</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_rebooting_Config__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has rebooting Config</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HepatitisC__c</fullName>
        <label>Hepatitis C</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>